Add new sub group for credit card payments

--- a/config.json
+++ b/config.json
@@ -65,6 +65,15 @@
              ]
           },
           {
+             "Name":"CreditCards",
+             "Hooks":[
+                {
+                   "Key":"Description",
+                   "Hook":"HALIFAX"
+                }
+             ]
+          },
+          {
              "Name":"DirectDebits",
              "Hooks":[
                 {
