Add a new food sub group

--- a/config.json
+++ b/config.json
@@ -46,6 +46,15 @@
                    "Hook":"JUST EAT"
                 }
              ]
+          },
+          {
+             "Name":"PizzaHut",
+             "Hooks":[
+                {
+                   "Key":"Description",
+                   "Hook":"PIZZA HUT"
+                }
+             ]
           }
        ],
        "MiscHooks":[
