Add income/outgoing group config

--- a/config.json
+++ b/config.json
@@ -1,266 +1,282 @@
 {
-  "Groups": [
-    {
-       "Name":"Food",
-       "SubGroups":[
-          {
-             "Name":"Dominos",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"DOMINOS"
-                }
-             ]
-          },
-          {
-             "Name":"UberEats",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"UBER EATS"
-                },
-                {
-                   "Key":"Description",
-                   "Hook":"UBER *EATS"
-                }
-             ]
-          },
-          {
-             "Name":"McDonalds",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"MCDONALDS"
-                }
-             ]
-          },
-          {
-             "Name":"JustEat",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"Just Eat"
-                },
-                {
-                   "Key":"Description",
-                   "Hook":"JUST EAT"
-                }
-             ]
-          },
-          {
-             "Name":"PizzaHut",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"PIZZA HUT"
-                }
-             ]
-          }
-       ],
-       "MiscHooks":[
+   "OutgoingGroups":[
+      {
+         "Name":"Food",
+         "SubGroups":[
+            {
+               "Name":"Dominos",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"DOMINOS"
+                  }
+               ]
+            },
+            {
+               "Name":"UberEats",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"UBER EATS"
+                  },
+                  {
+                     "Key":"Description",
+                     "Hook":"UBER *EATS"
+                  }
+               ]
+            },
+            {
+               "Name":"McDonalds",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"MCDONALDS"
+                  }
+               ]
+            },
+            {
+               "Name":"JustEat",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"Just Eat"
+                  },
+                  {
+                     "Key":"Description",
+                     "Hook":"JUST EAT"
+                  }
+               ]
+            },
+            {
+               "Name":"PizzaHut",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"PIZZA HUT"
+                  }
+               ]
+            }
+         ],
+         "MiscHooks":[
 
-       ]
-    },
-    {
-       "Name":"Bills",
-       "SubGroups":[
-          {
-             "Name":"Mortgage",
-             "Hooks":[
-                {
-                   "Key":"TransactionType",
-                   "Hook":"mortgage"
-                }
-             ]
-          },
-          {
-             "Name":"CreditCards",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"HALIFAX"
-                }
-             ]
-          },
-          {
-             "Name":"GasAndElectricity",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"TOTO ENERGY"
-                },
-                {
-                   "Key":"Description",
-                   "Hook":"EDF ENERGY"
-                }
-             ]
-          },
-          {
-             "Name":"Water",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"THAMES WATER"
-                }
-             ]
-          },
-          {
-             "Name":"CouncilTax",
-             "Hooks":[
-                {
-                   "Key":"TransactionType",
-                   "Hook":"Direct debit BEXLEY LONDON BORO"
-                }
-             ]
-          },
-          {
-             "Name":"DirectDebits",
-             "Hooks":[
-                {
-                   "Key":"TransactionType",
-                   "Hook":"Direct debit"
-                },
-                {
-                   "Key":"TransactionType",
-                   "Hook":"Direct Debit"
-                }
-             ]
-          },
-          {
-             "Name":"TescoDelivery",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"TESCO DELIVERY SAVER2"
-                },
-                {
-                   "Key":"Description",
-                   "Hook":"TESCO SUBSCRIPTION"
-                }
-             ]
-          },
-          {
-             "Name":"Netflix",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"NETFLIX.COM"
-                }
-             ]
-          }
-        ],
-       "MiscHooks":[
+         ]
+      },
+      {
+         "Name":"Bills",
+         "SubGroups":[
+            {
+               "Name":"Mortgage",
+               "Hooks":[
+                  {
+                     "Key":"TransactionType",
+                     "Hook":"mortgage"
+                  }
+               ]
+            },
+            {
+               "Name":"CreditCards",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"HALIFAX"
+                  }
+               ]
+            },
+            {
+               "Name":"GasAndElectricity",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"TOTO ENERGY"
+                  },
+                  {
+                     "Key":"Description",
+                     "Hook":"EDF ENERGY"
+                  }
+               ]
+            },
+            {
+               "Name":"Water",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"THAMES WATER"
+                  }
+               ]
+            },
+            {
+               "Name":"CouncilTax",
+               "Hooks":[
+                  {
+                     "Key":"TransactionType",
+                     "Hook":"Direct debit BEXLEY LONDON BORO"
+                  }
+               ]
+            },
+            {
+               "Name":"DirectDebits",
+               "Hooks":[
+                  {
+                     "Key":"TransactionType",
+                     "Hook":"Direct debit"
+                  },
+                  {
+                     "Key":"TransactionType",
+                     "Hook":"Direct Debit"
+                  }
+               ]
+            },
+            {
+               "Name":"TescoDelivery",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"TESCO DELIVERY SAVER2"
+                  },
+                  {
+                     "Key":"Description",
+                     "Hook":"TESCO SUBSCRIPTION"
+                  }
+               ]
+            },
+            {
+               "Name":"Netflix",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"NETFLIX.COM"
+                  }
+               ]
+            }
+         ],
+         "MiscHooks":[
 
-       ]
-    },
-    {
-       "Name":"Shopping",
-       "SubGroups":[
-          {
-             "Name":"Clothes",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"JACAMO"
-                }
-             ]
-          },
-          {
-             "Name":"iTunes",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"ITUNES.COM/BILL"
-                }
-             ]
-          },
-          {
-             "Name":"Amazon",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"Amazon.co.uk"
-                },
-                {
-                   "Key":"Description",
-                   "Hook":"AMZNMktplace"
-                }
-             ]
-          }
-        ],
-       "MiscHooks":[
+         ]
+      },
+      {
+         "Name":"Shopping",
+         "SubGroups":[
+            {
+               "Name":"Clothes",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"JACAMO"
+                  }
+               ]
+            },
+            {
+               "Name":"iTunes",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"ITUNES.COM/BILL"
+                  }
+               ]
+            },
+            {
+               "Name":"Amazon",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"Amazon.co.uk"
+                  },
+                  {
+                     "Key":"Description",
+                     "Hook":"AMZNMktplace"
+                  }
+               ]
+            }
+         ],
+         "MiscHooks":[
 
-       ]
-    },
-    {
-       "Name":"Groceries",
-       "SubGroups":[
-          {
-             "Name":"Tesco",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"TESCO STORE"
-                }
-             ]
-          },
-          {
-             "Name":"PrimeNow",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"Prime Now"
-                }
-             ]
-          }
-        ],
-       "MiscHooks":[
+         ]
+      },
+      {
+         "Name":"Groceries",
+         "SubGroups":[
+            {
+               "Name":"Tesco",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"TESCO STORE"
+                  }
+               ]
+            },
+            {
+               "Name":"PrimeNow",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"Prime Now"
+                  }
+               ]
+            }
+         ],
+         "MiscHooks":[
 
-       ]
-    },
-    {
-       "Name":"Travel",
-       "SubGroups":[
-          {
-             "Name":"TFL",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"TFL TRAVEL"
-                }
-             ]
-          },
-          {
-             "Name":"Trainline",
-             "Hooks":[
-                {
-                   "Key":"Description",
-                   "Hook":"TRAINLINE.COM"
-                }
-             ]
-          }
-        ],
-       "MiscHooks":[
+         ]
+      },
+      {
+         "Name":"Travel",
+         "SubGroups":[
+            {
+               "Name":"TFL",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"TFL TRAVEL"
+                  }
+               ]
+            },
+            {
+               "Name":"Trainline",
+               "Hooks":[
+                  {
+                     "Key":"Description",
+                     "Hook":"TRAINLINE.COM"
+                  }
+               ]
+            }
+         ],
+         "MiscHooks":[
 
-       ]
-    },
-    {
-       "Name":"Contactless",
-       "SubGroups":[],
-       "MiscHooks":[
-         {
-            "Key":"TransactionType",
-            "Hook":"Contactless Payment"
-         }
-       ]
-    }
-  ],
-  "CSVFields": [
-    "Date",
-    "TransactionType",
-    "Description",
-    "PaidOut",
-    "PaidIn",
-    "NewBalance"
-  ]
+         ]
+      },
+      {
+         "Name":"Contactless",
+         "SubGroups":[
+
+         ],
+         "MiscHooks":[
+            {
+               "Key":"TransactionType",
+               "Hook":"Contactless Payment"
+            }
+         ]
+      }
+   ],
+   "IncomeGroups":[
+      {
+         "Name":"Income",
+         "SubGroups":[
+
+         ],
+         "MiscHooks":[
+            {
+               "Key":"Description",
+               "Hook":"AMAZON DEVELOPMENT"
+            }
+         ]
+      }
+   ],
+   "CSVFields":[
+      "Date",
+      "TransactionType",
+      "Description",
+      "PaidOut",
+      "PaidIn",
+      "NewBalance"
+   ]
 }
